--- a/templates/base.html
+++ b/templates/base.html
@@ -21,6 +21,7 @@
 </head>
 <body>
     <div class="container">
+        <p>こんにちは！ {{ user_name }}さん</p>
         {% block content %}
         {% endblock %}
     </div>
