--- a/templates/index.html
+++ b/templates/index.html
@@ -33,6 +33,7 @@
     <h2>Events</h2>
     {% if events == [] %}
     <p>There are no events yet.</p>
+    <p>Please add data.</p>
     {% else %}
     <table border="1">
       <tr>
